# mybench

./: .gitignore  README.md
denormal/: CMakeLists.txt  build_android.sh  build_linux.sh  main.cc  run.sh
gflops/: CMakeLists.txt  FMLA.S  bench.cc  push.sh  run.sh
gflops-cuda/: bench_fp16.cu  bench_fp32.cu  build.sh  common.h
gflops-cuda/v0/: log.txt
gflops-cuda/v1/: build.sh  log.txt  main-cuda.cpp  mix_kernels_cuda.cu
gflops-directx/: CMakeLists.txt  FMLA.h  FMLA.hlsl  bench.cc  compile.bat  run.bat
gflops-macos/: bench.cc  build.sh  run.sh
gflops-openmp/: FMLA.S  bench.cc  build.sh  log.txt  run.sh
mem-bench/: CMakeLists.txt  bench.h  build_android.sh  bw_pipe.c  main.c  push.sh
memlat/: CMakeLists.txt  bench.h  build_linux.sh  lat_mem.c  lat_mem.h  lib_timing.c  main.c
utils/: CMakeLists.txt  bench_android.sh  bench_osx.sh  cpu_info.cc  cpu_info.h  cpu_utils.cc  cpu_utils.h  log.txt  log_32.txt  log_64.txt  main.cc
